instructions.Instructions.scala.code
baissebrosse()
avance(nbPas:2)
droite(nbPas:2)
recule(nbPas:2)
gauche()
levebrosse()
avance()